--- a/.htaccess
+++ b/.htaccess
@@ -10,3 +10,9 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^home$ index.php [L,NC]
 RewriteRule ^logout$ logout.php [L,NC]
 RewriteRule ^inventory$ inventory.php [L,NC]
+RewriteRule ^movement$ movement.php [L,NC]
+RewriteRule ^reports$ reports.php [L,NC]
+RewriteRule ^movement$ movement.php [L,NC]
+RewriteRule ^movement/entry$ movement.php?action=entry [L,NC]
+RewriteRule ^movement/out$ movement.php?action=out [L,NC]
+
